--- a/apps/lcdr-docs/package.json
+++ b/apps/lcdr-docs/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elucidario/mdorim-docs",
+    "name": "@elucidario/app-lcdr-docs",
     "version": "0.1.0",
     "private": true,
     "scripts": {
