--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elucidario/tsconfig",
+    "name": "@elucidario/pkg-tsconfig",
     "version": "1.0.0",
     "description": "Configuração typescrit compartilhada",
     "main": "tsconfig.json",
