--- a/packages/docusaurus-md/package.json
+++ b/packages/docusaurus-md/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elucidario/docusaurus-md",
+    "name": "@elucidario/pkg-docusaurus-md",
     "version": "0.1.0",
     "description": "Markdown generator for Docusaurus",
     "license": "MIT",
@@ -14,8 +14,8 @@
         "test": "jest"
     },
     "devDependencies": {
-        "@elucidario/rollup": "workspace:^",
-        "@elucidario/tsconfig": "workspace:^",
+        "@elucidario/pkg-rollup": "workspace:^",
+        "@elucidario/pkg-tsconfig": "workspace:^",
         "@elucidario/types": "workspace:^",
         "@types/node": "^18.15.11",
         "jest": "^29.5.0",
