--- a/packages/md-to-gdoc/tsconfig.json
+++ b/packages/md-to-gdoc/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "@elucidario/tsconfig",
+    "extends": "@elucidario/pkg-tsconfig",
     "compilerOptions": {
         "resolveJsonModule": true,
         "outDir": "dist",
