--- a/packages/parse-args/package.json
+++ b/packages/parse-args/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elucidario/parse-args",
+    "name": "@elucidario/pkg-parse-args",
     "version": "0.1.0",
     "license": "MIT",
     "type": "module",
@@ -10,8 +10,8 @@
         "clean": "rm -rf dist/*"
     },
     "devDependencies": {
-        "@elucidario/rollup": "workspace:^",
-        "@elucidario/tsconfig": "workspace:^",
+        "@elucidario/pkg-rollup": "workspace:^",
+        "@elucidario/pkg-tsconfig": "workspace:^",
         "@types/node": "^18.15.11",
         "rollup": "^3.20.2",
         "typescript": "^5.0.4"
