--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elucidario/pub-gen",
+    "name": "@elucidario/pkg-pub-gen",
     "version": "0.1.0",
     "description": "Gerador de publicações para o Elucidário.art",
     "homepage": "https://github.com/hgodinho/elucidario/packages/pub-gen#readme",
@@ -24,10 +24,10 @@
         "test": "node ./__tests__/pub-gen.test.js"
     },
     "dependencies": {
-        "@elucidario/md-to-gdoc": "workspace:^",
-        "@elucidario/parse-args": "workspace:^",
-        "@elucidario/schema-doc": "workspace:^",
-        "@elucidario/docusaurus-md": "workspace:^",
+        "@elucidario/pkg-md-to-gdoc": "workspace:^",
+        "@elucidario/pkg-parse-args": "workspace:^",
+        "@elucidario/pkg-schema-doc": "workspace:^",
+        "@elucidario/pkg-docusaurus-md": "workspace:^",
         "ajv": "^8.12.0",
         "chalk": "^5.2.0",
         "commander": "^10.0.0",
