--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -11,7 +11,7 @@
         "watch": "tsc -w"
     },
     "devDependencies": {
-        "@elucidario/tsconfig": "workspace:^",
+        "@elucidario/pkg-tsconfig": "workspace:^",
         "@types/node": "^18.15.11",
         "typescript": "^5.0.4"
     }
