--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "graph": "pnpm nx graph",
         "docusaurus": "lerna run docusaurus",
         "start": "lerna run start",
-        "build": "lerna run build --stream",
-        "build:pkg-app": "pnpm build --scope='{@elucidario/pkg-*,@elucidario/app-*}'",
+        "build": "lerna run build",
+        "build:pkg-app": "pnpm build --ignore '@elucidario/pub-*'",
         "swizzle": "lerna run swizzle",
         "deploy": "lerna run deploy",
         "serve": "lerna run serve",
