--- a/packages/schema-doc/package.json
+++ b/packages/schema-doc/package.json
@@ -15,17 +15,25 @@
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
     },
     "dependencies": {
+        "@apidevtools/json-schema-ref-parser": "^10.1.0",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
         "chalk": "^5.2.0",
+        "esm": "^3.2.25",
         "fs": "0.0.1-security",
+        "i18n": "^0.15.1",
+        "lodash-es": "^4.17.21",
         "path": "^0.12.7"
     },
     "devDependencies": {
         "@elucidario/pkg-rollup": "workspace:^",
         "@elucidario/pkg-tsconfig": "workspace:^",
-        "@elucidario/types": "workspace:^",
+        "@elucidario/pkg-types": "workspace:^",
         "@jest/globals": "^29.5.0",
         "@rollup/plugin-typescript": "^11.1.0",
+        "@types/esm": "^3.2.0",
+        "@types/i18n": "^0.13.6",
+        "@types/json-schema": "^7.0.11",
+        "@types/lodash-es": "^4.17.7",
         "@types/node": "^18.15.11",
         "babel-jest": "^29.5.0",
         "jest": "^29.5.0",
