fix(docusaurus-md): pacage types renamed

--- a/packages/docusaurus-md/tsconfig.json
+++ b/packages/docusaurus-md/tsconfig.json
@@ -7,6 +7,6 @@
     },
     "include": ["src/index.ts"],
     "paths": {
-        "@elucidario/types": ["../types/src"]
+        "@elucidario/pkg-types": ["../types/src"]
     }
 }
