--- a/packages/docusaurus-md/package.json
+++ b/packages/docusaurus-md/package.json
@@ -16,7 +16,7 @@
     "devDependencies": {
         "@elucidario/pkg-rollup": "workspace:^",
         "@elucidario/pkg-tsconfig": "workspace:^",
-        "@elucidario/types": "workspace:^",
+        "@elucidario/pkg-types": "workspace:^",
         "@types/node": "^18.15.11",
         "jest": "^29.5.0",
         "rollup": "^3.20.2",
