--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,22 +2,19 @@
     "name": "@elucidario/pkg-eslint-config",
     "version": "0.1.0",
     "description": "Configurações eslint compartilhadas",
-    "main": ".eslintrc.js",
-    "author": "Henrique Godinho <henrique@hgod.in>",
     "license": "MIT",
-    "dependencies": {
+    "author": "Henrique Godinho <henrique@hgod.in>",
+    "main": ".eslintrc.js",
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
         "eslint": "^8.38.0",
         "eslint-config-next": "^13.3.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^6.1.1"
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.57.1",
-        "@typescript-eslint/parser": "^5.57.1",
-        "eslint": "^8.35.0",
         "eslint-plugin-n": "^15.7.0",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^6.1.1",
         "typescript": "^5.0.4"
     }
 }
