--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -11,29 +11,41 @@
         "url": "git+https://github.com/hgodinho/elucidario.git"
     },
     "license": "MIT",
-    "author": "hgodinho <henrique@hgod.in>",
+    "author": {
+        "name": "Henrique Godinho",
+        "email": "ola@hgod.in"
+    },
     "type": "module",
     "main": "index.js",
     "bin": {
         "pub-gen": "./index.js"
     },
     "scripts": {
+        "build": "pnpm clean:docs && node bin/build.js -l pt-BR && pnpm test",
         "clean:docs": "rm -rf ./docs/*",
-        "build": "pnpm clean:docs && node bin/build.js",
+        "dev": "pnpm clean:docs && node bin/build.js -w -l pt-BR",
         "pub-gen": "node ./index.js",
-        "test": "node ./__tests__/pub-gen.test.js"
+        "test": "jest"
     },
     "dependencies": {
+        "@apidevtools/json-schema-ref-parser": "^10.1.0",
+        "@babel/plugin-syntax-import-assertions": "^7.20.0",
+        "@babel/preset-env": "^7.21.4",
+        "@elucidario/pkg-console": "workspace:^",
+        "@elucidario/pkg-docusaurus-md": "workspace:^",
         "@elucidario/pkg-md-to-gdoc": "workspace:^",
         "@elucidario/pkg-parse-args": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
-        "@elucidario/pkg-docusaurus-md": "workspace:^",
         "ajv": "^8.12.0",
+        "babel-jest": "^29.5.0",
         "chalk": "^5.2.0",
         "commander": "^10.0.0",
+        "i18n": "^0.15.1",
         "inquirer": "^9.1.5",
+        "jest": "^29.5.0",
         "jsdom": "^21.1.1",
         "json-schema": "^0.4.0",
+        "lodash-es": "^4.17.21",
         "prettier": "^2.8.7",
         "remark": "^14.0.2",
         "remark-frontmatter": "^4.0.1",
@@ -46,7 +58,7 @@
         "unist-util-visit": "^4.1.2"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.21.3",
-        "lodash": "^4.17.21"
+        "@babel/eslint-parser": "^7.21.3"
     }
 }
+
