--- a/apps/lcdr-docs/package.json
+++ b/apps/lcdr-docs/package.json
@@ -3,17 +3,29 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "docusaurus": "docusaurus",
-        "start": "docusaurus start",
         "build": "docusaurus build",
         "build:codespace": "export ENV=codespace && docusaurus build",
-        "swizzle": "docusaurus swizzle",
-        "deploy": "docusaurus deploy",
         "clear": "docusaurus clear",
+        "deploy": "docusaurus deploy",
+        "docusaurus": "docusaurus",
         "serve": "docusaurus serve",
-        "write-translations": "docusaurus write-translations",
+        "start": "docusaurus start",
+        "swizzle": "docusaurus swizzle",
+        "typecheck": "tsc",
         "write-heading-ids": "docusaurus write-heading-ids",
-        "typecheck": "tsc"
+        "write-translations": "docusaurus write-translations"
+    },
+    "browserslist": {
+        "production": [
+            ">0.5%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "dependencies": {
         "@docusaurus/core": "^2.4.0",
@@ -29,19 +41,8 @@
     },
     "devDependencies": {
         "@tsconfig/docusaurus": "^1.0.7",
+        "@types/node": "^18.15.11",
         "typescript": "^5.0.4"
-    },
-    "browserslist": {
-        "production": [
-            ">0.5%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
     },
     "engines": {
         "node": ">=16.14"
