fix(types): melhorias

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "clear": "rm -rf dist/*",
         "build": "pnpm clear && tsc",
-        "watch": "tsc -w"
+        "dev": "pnpm clear && tsc -w"
     },
     "devDependencies": {
         "@elucidario/pkg-tsconfig": "workspace:^",
