--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -21,31 +21,33 @@
         "pub-gen": "./index.js"
     },
     "scripts": {
-        "build": "pnpm clean:docs && node bin/build.js -l pt-BR && pnpm test",
+        "build": " pnpm clean:dist && pnpm clean:docs && node bin/build.js -l pt-BR && pnpm test",
+        "clean:dist": "rm -rf ./static/*",
         "clean:docs": "rm -rf ./docs/*",
-        "dev": "pnpm clean:docs && node bin/build.js -w -l pt-BR",
+        "dev": "pnpm clean:dist && pnpm clean:docs && node bin/build.js -w -l pt-BR",
         "pub-gen": "node ./index.js",
-        "test": "jest"
+        "test": "jest --coverage"
     },
     "dependencies": {
         "@apidevtools/json-schema-ref-parser": "^10.1.0",
-        "@babel/plugin-syntax-import-assertions": "^7.20.0",
-        "@babel/preset-env": "^7.21.4",
+        "@babel/core": "^7.21.5",
         "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
         "@elucidario/pkg-md-to-gdoc": "workspace:^",
         "@elucidario/pkg-parse-args": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
         "ajv": "^8.12.0",
-        "babel-jest": "^29.5.0",
+        "babel-plugin-transform-import-meta": "^2.2.0",
         "chalk": "^5.2.0",
+        "chokidar": "^3.5.3",
         "commander": "^10.0.0",
         "i18n": "^0.15.1",
         "inquirer": "^9.1.5",
-        "jest": "^29.5.0",
+        "js-search": "^2.0.0",
         "jsdom": "^21.1.1",
         "json-schema": "^0.4.0",
         "lodash-es": "^4.17.21",
+        "object-hash": "^3.0.0",
         "prettier": "^2.8.7",
         "remark": "^14.0.2",
         "remark-frontmatter": "^4.0.1",
@@ -58,7 +60,11 @@
         "unist-util-visit": "^4.1.2"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.21.3"
+        "@babel/eslint-parser": "^7.21.3",
+        "@babel/plugin-syntax-import-assertions": "^7.20.0",
+        "@babel/plugin-syntax-import-meta": "^7.10.4",
+        "@babel/preset-env": "^7.21.4",
+        "babel-jest": "^29.5.0",
+        "jest": "^29.5.0"
     }
 }
-
