--- a/packages/mdorim/package.json
+++ b/packages/mdorim/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@elucidario/pkg-mdorim",
     "version": "0.1.0",
+    "homepage": "https://elucidario.art/mdorim",
     "license": "MIT",
     "author": {
         "name": "Henrique Godinho",
@@ -9,40 +10,22 @@
     "type": "module",
     "main": "dist/mdorim.js",
     "scripts": {
-        "build": "pnpm clean:dist && rollup -c && pnpm build:docs",
-        "build:docs": "pnpm clean:docs && tsx src/build-docs.ts",
-        "clean:dist": "rm -rf dist/*",
+        "build": "pnpm clean:docs && pnpm clean:dist && pnpm clean:static && node src/build.js",
         "clean:docs": "rm -rf docs/*",
-        "dev": "tsx watch src/build-docs.ts",
-        "dev:docs": "pnpm build:docs -w",
-        "test": "jest"
+        "clean:dist": "rm -rf dist/*",
+        "clean:static": "rm -rf static/*",
+        "dev": "pnpm build -w"
+    },
+    "dependencies": {
+        "json-schema-to-typescript": "^13.0.1",
+        "lodash-es": "^4.17.21"
     },
     "devDependencies": {
+        "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
         "@elucidario/pkg-pub-gen": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
-        "@elucidario/pkg-tsconfig": "workspace:^",
-        "@elucidario/pkg-types": "workspace:^",
-        "@rollup/plugin-json": "^6.0.0",
-        "@rollup/plugin-run": "^3.0.1",
-        "@rollup/plugin-terser": "^0.4.0",
-        "@rollup/plugin-typescript": "^11.1.0",
-        "@types/lodash": "^4.14.192",
-        "@types/mustache": "^4.2.2",
-        "@types/node": "^18.15.11",
-        "chalk": "^5.2.0",
         "commander": "^10.0.0",
-        "eslint": "^8.38.0",
-        "fs": "0.0.1-security",
-        "jest": "^29.5.0",
-        "lodash": "^4.17.21",
-        "path": "^0.12.7",
-        "rollup": "^3.20.2",
-        "rollup-plugin-copy": "^3.4.0",
-        "ts-jest": "^29.1.0",
-        "ts-node": "^10.9.1",
-        "tsx": "^3.12.6",
-        "typescript": "^5.0.4",
         "url": "^0.11.0"
     }
 }
