--- a/packages/schema-doc/package.json
+++ b/packages/schema-doc/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@apidevtools/json-schema-ref-parser": "^10.1.0",
+        "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
         "chalk": "^5.2.0",
         "esm": "^3.2.25",
@@ -38,6 +39,7 @@
         "babel-jest": "^29.5.0",
         "jest": "^29.5.0",
         "rollup": "^3.20.2",
-        "ts-jest": "^29.1.0"
+        "ts-jest": "^29.1.0",
+        "url": "^0.11.0"
     }
 }
