--- a/packages/schema-doc/tsconfig.json
+++ b/packages/schema-doc/tsconfig.json
@@ -7,7 +7,8 @@
         "esModuleInterop": true,
         "paths": {
             "@elucidario/pkg-types": ["../types/dist"],
-            "@elucidario/pkg-docusaurus-md": ["../docusaurus-md/dist"]
+            "@elucidario/pkg-docusaurus-md": ["../docusaurus-md/dist"],
+            "@elucidario/pkg-schema-doc": ["../schema-doc/dist"]
         }
     },
     "include": ["src/index.ts"],
