--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 node_modules
 vendor
 packages/*/dist
+packages/*/static
 apps/*/dist
 apps/*/build
 coverage
+
+lerna-debug.log
 
 # ensure no secrets are committed
 credentials.json
