--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -31,15 +31,18 @@
     "dependencies": {
         "@apidevtools/json-schema-ref-parser": "^10.1.0",
         "@babel/core": "^7.21.5",
+        "@benrbray/remark-cite": "^1.1.0",
         "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
         "@elucidario/pkg-md-to-gdoc": "workspace:^",
         "@elucidario/pkg-parse-args": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
         "ajv": "^8.12.0",
+        "axios": "^1.4.0",
         "babel-plugin-transform-import-meta": "^2.2.0",
         "chalk": "^5.2.0",
         "chokidar": "^3.5.3",
+        "citeproc": "^2.4.63",
         "commander": "^10.0.0",
         "i18n": "^0.15.1",
         "inquirer": "^9.1.5",
@@ -47,9 +50,12 @@
         "jsdom": "^21.1.1",
         "json-schema": "^0.4.0",
         "lodash-es": "^4.17.21",
+        "node-html-markdown": "^1.3.0",
         "object-hash": "^3.0.0",
         "prettier": "^2.8.7",
+        "rehype-parse": "^8.0.4",
         "remark": "^14.0.2",
+        "remark-docx": "^0.1.2",
         "remark-frontmatter": "^4.0.1",
         "remark-gfm": "^3.0.1",
         "remark-parse": "^10.0.1",
