--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -52,6 +52,7 @@
         "lodash-es": "^4.17.21",
         "node-html-markdown": "^1.3.0",
         "object-hash": "^3.0.0",
+        "octokit": "^2.0.16",
         "prettier": "^2.8.7",
         "rehype-parse": "^8.0.4",
         "remark": "^14.0.2",
