--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -30,7 +30,7 @@
     },
     "dependencies": {
         "@apidevtools/json-schema-ref-parser": "^10.1.0",
-        "@babel/core": "^7.21.5",
+        "@babel/core": "^7.21.8",
         "@benrbray/remark-cite": "^1.1.0",
         "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
@@ -41,36 +41,40 @@
         "axios": "^1.4.0",
         "babel-plugin-transform-import-meta": "^2.2.0",
         "chalk": "^5.2.0",
+        "child_process": "^1.0.2",
         "chokidar": "^3.5.3",
         "citeproc": "^2.4.63",
-        "commander": "^10.0.0",
+        "commander": "^10.0.1",
+        "fs": "0.0.1-security",
         "i18n": "^0.15.1",
-        "inquirer": "^9.1.5",
-        "js-search": "^2.0.0",
-        "jsdom": "^21.1.1",
+        "inquirer": "^9.2.5",
+        "js-search": "^2.0.1",
+        "jsdom": "^22.0.0",
         "json-schema": "^0.4.0",
         "lodash-es": "^4.17.21",
         "node-html-markdown": "^1.3.0",
         "object-hash": "^3.0.0",
         "octokit": "^2.0.16",
-        "prettier": "^2.8.7",
+        "path": "^0.12.7",
+        "prettier": "^2.8.8",
         "rehype-parse": "^8.0.4",
-        "remark": "^14.0.2",
-        "remark-docx": "^0.1.2",
+        "remark": "^14.0.3",
+        "remark-docx": "^0.1.3",
         "remark-frontmatter": "^4.0.1",
         "remark-gfm": "^3.0.1",
-        "remark-parse": "^10.0.1",
+        "remark-parse": "^10.0.2",
         "remark-prettier": "^2.0.0",
-        "remark-stringify": "^10.0.2",
+        "remark-stringify": "^10.0.3",
+        "tableschema": "^1.12.6",
         "unified": "^10.1.2",
         "unified-stream": "^2.0.0",
         "unist-util-visit": "^4.1.2"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.21.3",
+        "@babel/eslint-parser": "^7.21.8",
         "@babel/plugin-syntax-import-assertions": "^7.20.0",
         "@babel/plugin-syntax-import-meta": "^7.10.4",
-        "@babel/preset-env": "^7.21.4",
+        "@babel/preset-env": "^7.21.5",
         "babel-jest": "^29.5.0",
         "jest": "^29.5.0"
     }
