feat(types): isola console type

--- a/packages/console/tsconfig.json
+++ b/packages/console/tsconfig.json
@@ -5,7 +5,8 @@
 		"outDir": "dist",
 		"jsx": "react",
 		"paths": {
-			"ink": ["node_modules/ink/build/index.d.ts"]
+			"ink": ["node_modules/ink/build/index.d.ts"],
+			"@elucidario/pkg-types": ["../types/dist/index.d.ts"]
 		}
 	},
 	"include": ["src/index.ts"]
