--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -33,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@elucidario/pkg-tsconfig": "workspace:^",
+		"@elucidario/pkg-types": "workspace:^",
 		"@types/react": "^18.0.32",
 		"@vdemedes/prettier-config": "^2.0.1",
 		"ava": "^5.2.0",
