--- a/packages/schema-doc/tsconfig.json
+++ b/packages/schema-doc/tsconfig.json
@@ -8,7 +8,8 @@
             "@elucidario/pkg-types": ["../types/dist"],
             "@elucidario/pkg-docusaurus-md": ["../docusaurus-md/dist"],
             "@elucidario/pkg-schema-doc": ["../schema-doc/dist"],
-            "@elucidario/pkg-console": ["../console/dist"]
+            "@elucidario/pkg-console": ["../console/dist"],
+            "@elucidario/pkg-paths": ["../paths/dist"]
         }
     },
     "include": ["src/index.ts"],
