--- a/.github/workflows/deploy-lcdr.yml
+++ b/.github/workflows/deploy-lcdr.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          personal_token: ${{secrets.GH_PAGES_TOKEN}}
+          personal_token: ${{secrets.GITHUB_TOKEN}}
           publish_dir: apps/lcdr-docs/build
