--- a/packages/mdorim/package.json
+++ b/packages/mdorim/package.json
@@ -11,8 +11,8 @@
     "main": "dist/mdorim.js",
     "scripts": {
         "build": "pnpm clean:docs && pnpm clean:dist && pnpm clean:static && node src/build.js",
-        "clean:docs": "rm -rf docs/*",
         "clean:dist": "rm -rf dist/*",
+        "clean:docs": "rm -rf docs/*",
         "clean:static": "rm -rf static/*",
         "dev": "pnpm build -w"
     },
@@ -23,9 +23,8 @@
     "devDependencies": {
         "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
+        "@elucidario/pkg-paths": "workspace:^",
         "@elucidario/pkg-pub-gen": "workspace:^",
-        "@elucidario/pkg-schema-doc": "workspace:^",
-        "commander": "^10.0.0",
-        "url": "^0.11.0"
+        "@elucidario/pkg-schema-doc": "workspace:^"
     }
 }
