fix(pub-gen): fixes
adiciona valor padrão caso célula de tabela seja nulo e build passa a usar @elucidario/pkg-paths

--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -36,6 +36,7 @@
         "@elucidario/pkg-docusaurus-md": "workspace:^",
         "@elucidario/pkg-md-to-gdoc": "workspace:^",
         "@elucidario/pkg-parse-args": "workspace:^",
+        "@elucidario/pkg-paths": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
         "ajv": "^8.12.0",
         "axios": "^1.4.0",
