chore(workspace): monorepo files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,7 @@
     },
     "markdownlint.run": "onSave",
     "markdown.occurrencesHighlight.enabled": true,
-    "markdownlint.config": {
-        "md033": false
-    },
+    "markdownlint.ignore": ["./publications/**/content/**/*"],
     "[json]": {
         "editor.quickSuggestions": {
             "strings": true
@@ -17,7 +15,86 @@
     },
     "editor.formatOnSave": true,
     "cSpell.language": "en, pt-br",
-    "cSpell.words": ["colspan", "lcdr"],
+    "cSpell.words": [
+        "Albrechtsen",
+        "Athanasios",
+        "BELKIN",
+        "Bonomi",
+        "BORKO",
+        "botallo",
+        "buckland",
+        "catalogacao",
+        "CDWA",
+        "cetic",
+        "ciencia",
+        "classificacoes",
+        "coadic",
+        "Codiac",
+        "codigo",
+        "colspan",
+        "comite",
+        "comunicacao",
+        "declaracao",
+        "Delmas",
+        "derviche",
+        "desacessão",
+        "Desacessão",
+        "documentacao",
+        "documentacion",
+        "documentaion",
+        "docusaurus",
+        "Emmanuelle",
+        "epistemologicas",
+        "estructurados",
+        "etica",
+        "Europeana",
+        "evolucao",
+        "FERNÁNDEZ",
+        "Frohmann",
+        "funcao",
+        "github",
+        "Hillhouse",
+        "historicas",
+        "hjorland",
+        "Hjorland",
+        "HJORLAND",
+        "icom",
+        "informacao",
+        "informacion",
+        "inovacao",
+        "Jacoby",
+        "Kenna",
+        "Kornwachs",
+        "Kosuth",
+        "lcdr",
+        "localizacao",
+        "LOCALIZACAO",
+        "localizacoes",
+        "lusofono",
+        "Machlup",
+        "MASTERMANN",
+        "nivel",
+        "ODDY",
+        "paradigmaticas",
+        "peaceiris",
+        "principios",
+        "profesionales",
+        "sanderson",
+        "Sanderson",
+        "saracevic",
+        "semantica",
+        "sistematizacion",
+        "sparql",
+        "sporny",
+        "tecnica",
+        "TECNICA",
+        "titulos",
+        "vega",
+        "Velios",
+        "vocabularios",
+        "WALDROP",
+        "Zoglauer"
+    ],
     "eslint.packageManager": "pnpm",
     "npm.packageManager": "pnpm",
     "prettier.tabWidth": 4,
