fix(workspace): workflow add cname

--- a/.github/workflows/deploy-lcdr.yml
+++ b/.github/workflows/deploy-lcdr.yml
@@ -34,3 +34,4 @@ jobs:
         with:
           personal_token: ${{secrets.GITHUB_TOKEN}}
           publish_dir: apps/lcdr-docs/build
+          cname: elucidario.art
