--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -56,6 +56,7 @@
         "node-html-markdown": "^1.3.0",
         "object-hash": "^3.0.0",
         "octokit": "^2.0.16",
+        "parser-front-matter": "^1.6.4",
         "path": "^0.12.7",
         "prettier": "^2.8.8",
         "rehype-parse": "^8.0.4",
@@ -66,6 +67,7 @@
         "remark-parse": "^10.0.2",
         "remark-prettier": "^2.0.0",
         "remark-stringify": "^10.0.3",
+        "simple-git": "^3.19.0",
         "tableschema": "^1.12.6",
         "unified": "^10.1.2",
         "unified-stream": "^2.0.0",
