chore(workspace): config files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
     "cSpell.words": [
         "Albrechtsen",
         "Athanasios",
+        "Auguste",
+        "Bardi",
         "BELKIN",
         "Bonomi",
         "BORKO",
@@ -43,6 +45,7 @@
         "documentacion",
         "documentaion",
         "docusaurus",
+        "Dodd",
         "Emmanuelle",
         "epistemologicas",
         "estructurados",
@@ -50,31 +53,40 @@
         "Europeana",
         "evolucao",
         "FERNÁNDEZ",
+        "Ferrez",
         "Frohmann",
         "funcao",
         "github",
+        "Guanyin",
+        "Hessel",
         "Hillhouse",
         "historicas",
         "hjorland",
         "Hjorland",
         "HJORLAND",
         "icom",
+        "ilustracoes",
         "informacao",
         "informacion",
         "inovacao",
         "Jacoby",
+        "Katz",
         "Kenna",
         "Kornwachs",
         "Kosuth",
+        "Lasar",
         "lcdr",
         "localizacao",
         "LOCALIZACAO",
         "localizacoes",
         "lusofono",
         "Machlup",
+        "MASP",
         "MASTERMANN",
+        "Mattos",
         "nivel",
         "ODDY",
+        "Ottoni",
         "paradigmaticas",
         "peaceiris",
         "principios",
@@ -82,12 +94,16 @@
         "sanderson",
         "Sanderson",
         "saracevic",
+        "Segall",
         "semantica",
         "sistematizacion",
+        "Sotheby’s",
         "sparql",
         "sporny",
+        "Tagliaferro",
         "tecnica",
         "TECNICA",
+        "teorico",
         "titulos",
         "vega",
         "Velios",
