feat(interseccoes-entre-linked-art-e-spectrum): avanço

--- a/publications/interseccoes-entre-linked-art-e-spectrum/package.json
+++ b/publications/interseccoes-entre-linked-art-e-spectrum/package.json
@@ -8,6 +8,7 @@
         "ref-add": "pub-gen reference add -p interseccoes-entre-linked-art-e-spectrum",
         "ref-search": "pub-gen reference search -p interseccoes-entre-linked-art-e-spectrum",
         "version-up": "pub-gen version -p interseccoes-entre-linked-art-e-spectrum",
+        "convert": "pub-gen pandoc convert -p interseccoes-entre-linked-art-e-spectrum",
         "authenticate": "pub-gen authenticate -p interseccoes-entre-linked-art-e-spectrum",
         "build": "pnpm clean && pub-gen build -p interseccoes-entre-linked-art-e-spectrum",
         "clean": "rm -rf dist/*"
