chore(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,17 +19,21 @@
         "Albrechtsen",
         "Athanasios",
         "Auguste",
+        "Baciccio",
         "Bardi",
+        "Battista",
         "BELKIN",
         "Bonomi",
         "BORKO",
         "botallo",
         "buckland",
         "catalogacao",
+        "Cavalcanti",
         "CDWA",
         "cetic",
         "ciencia",
         "classificacoes",
+        "cmek",
         "coadic",
         "Codiac",
         "codigo",
@@ -56,6 +60,7 @@
         "Ferrez",
         "Frohmann",
         "funcao",
+        "Gaulli",
         "github",
         "Guanyin",
         "Hessel",
@@ -70,8 +75,10 @@
         "informacion",
         "inovacao",
         "Jacoby",
+        "Joomla",
         "Katz",
         "Kenna",
+        "klabin",
         "Kornwachs",
         "Kosuth",
         "Lasar",
@@ -84,6 +91,7 @@
         "MASP",
         "MASTERMANN",
         "Mattos",
+        "museologica",
         "nivel",
         "ODDY",
         "Ottoni",
@@ -104,6 +112,7 @@
         "tecnica",
         "TECNICA",
         "teorico",
+        "timespan",
         "titulos",
         "vega",
         "Velios",
