feat(dissertacao-mestrado): spectrum e organização
adiciona os 9 procedimentos princiapis e reestrutura o quadro-teorico para armazenar os json em uma
pasta para cada tópico

--- a/references/collections-trust2017.2_appendix-information-requirements-spectrum.json
+++ b/references/collections-trust2017.2_appendix-information-requirements-spectrum.json
@@ -5,8 +5,9 @@
     "_slug": "appendix-information-requirements-spectrum",
     "_create": "2023-05-21T19:16:12.053Z",
     "_update": "2023-05-21T19:16:12.053Z",
-    "type": "webpage",
-    "title": "Appendix - information requirements - Spectrum",
+    "type": "standard",
+    "title": "Appendix - information requirements",
+    "container-title": "Spectrum 5",
     "author": [
         {
             "family": "Collections Trust"
