--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -34,7 +34,7 @@
         "@benrbray/remark-cite": "^1.1.0",
         "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
-        "@elucidario/pkg-md-to-gdoc": "workspace:^",
+        "@elucidario/pkg-g-api-utils": "workspace:^",
         "@elucidario/pkg-parse-args": "workspace:^",
         "@elucidario/pkg-paths": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
@@ -46,6 +46,7 @@
         "chokidar": "^3.5.3",
         "citeproc": "^2.4.63",
         "commander": "^10.0.1",
+        "dotenv": "^16.1.4",
         "fs": "0.0.1-security",
         "i18n": "^0.15.1",
         "inquirer": "^9.2.5",
