chore(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,9 +16,12 @@
     "editor.formatOnSave": true,
     "cSpell.language": "en, pt-br",
     "cSpell.words": [
+        "ABSPATH",
         "Albrechtsen",
         "Athanasios",
         "Auguste",
+        "autoload",
+        "automattic",
         "Baciccio",
         "Bardi",
         "Battista",
@@ -35,11 +38,14 @@
         "classificacoes",
         "cmek",
         "coadic",
+        "codesniffer",
         "Codiac",
         "codigo",
         "colspan",
         "comite",
         "comunicacao",
+        "dealerdirect",
+        "debugado",
         "declaracao",
         "Delmas",
         "derviche",
@@ -76,6 +82,7 @@
         "inovacao",
         "Jacoby",
         "Joomla",
+        "justinrainbow",
         "Katz",
         "Kenna",
         "klabin",
@@ -86,6 +93,7 @@
         "localizacao",
         "LOCALIZACAO",
         "localizacoes",
+        "longtext",
         "lusofono",
         "Machlup",
         "MASP",
@@ -97,6 +105,9 @@
         "Ottoni",
         "paradigmaticas",
         "peaceiris",
+        "phpcodesniffer",
+        "phpcompatibility",
+        "phpunit",
         "principios",
         "profesionales",
         "sanderson",
@@ -108,16 +119,22 @@
         "Sotheby’s",
         "sparql",
         "sporny",
+        "squizlabs",
         "Tagliaferro",
         "tecnica",
         "TECNICA",
         "teorico",
         "timespan",
         "titulos",
+        "Uncategorized",
         "vega",
         "Velios",
+        "vipwpcs",
         "vocabularios",
         "WALDROP",
+        "wpcs",
+        "wpdb",
+        "Yoast",
         "Zoglauer"
     ],
     "eslint.packageManager": "pnpm",
