--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,6 +9,7 @@
     "main": "index.js",
     "scripts": {
         "index": "node ./.bin/create-index.js",
+        "make-pot": "node ./.bin/make-pot.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
@@ -18,12 +19,14 @@
         "@elucidario/pkg-types": "workspace:^"
     },
     "devDependencies": {
-        "@types/node": "^18.15.11"
+        "@types/node": "^18.15.11",
+        "wp-pot": "^1.10.2"
     },
     "wp_plugin": {
         "name": "Elucidário.art",
         "wp_at_least": "5.8.0",
         "min_php": "7.4",
-        "text_domain": "lcdr"
+        "text_domain": "lcdr",
+        "domain_path": "/languages"
     }
 }
