--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -20,10 +20,19 @@
         "@elucidario/pkg-rollup": "workspace:^",
         "@elucidario/pkg-tsconfig": "workspace:^",
         "@elucidario/pkg-types": "workspace:^",
+        "@storybook/addon-essentials": "7.0.22",
+        "@storybook/addon-interactions": "7.0.22",
+        "@storybook/addon-links": "7.0.22",
+        "@storybook/blocks": "7.0.22",
+        "@storybook/react": "7.0.22",
+        "@storybook/react-vite": "7.0.22",
+        "@storybook/testing-library": "0.0.14-next.2",
         "@types/node": "^18.15.11",
+        "prop-types": "15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rollup": "^3.20.2",
+        "storybook": "7.0.22",
         "typescript": "^5.1.3"
     },
     "dependencies": {
