fix(workspace): workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "Battista",
         "BELKIN",
         "Bonomi",
+        "booleano",
         "BORKO",
         "botallo",
         "buckland",
@@ -44,6 +45,7 @@
         "colspan",
         "comite",
         "comunicacao",
+        "datetime",
         "dealerdirect",
         "debugado",
         "declaracao",
