fix(workspace): pre dissertacao 0.6.1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "comite",
         "comunicacao",
         "datetime",
+        "dashicons",
         "dealerdirect",
         "debugado",
         "declaracao",
@@ -101,6 +102,7 @@
         "MASP",
         "MASTERMANN",
         "Mattos",
+        "mofile",
         "museologica",
         "nivel",
         "ODDY",
