feat(design-system): testes, tailwind, axe-jest
configura testes, axe-jest e tailwind

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -6,10 +6,17 @@
         "jsx": "react",
         "baseUrl": ".",
         "moduleResolution": "node",
+        "module": "ES2015",
         "declaration": true,
+        "declarationMap": true,
+        "preserveSymlinks": true,
+        "declarationDir": "./types",
         "paths": {
             "@/*": ["./src/*"],
-            "@elucidario/pkg-types": ["../types/dist/*"]
+            "@elucidario/pkg-types": [
+                "./node_modules/@elucidario/pkg-types/dist/index.d.ts"
+            ],
+            "tslib": ["./node_modules/tslib/tslib.d.ts"]
         }
     },
     "include": ["src/**/*"]
