--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -11,32 +11,41 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
-        "build": "rollup -c"
+        "build": "rollup -c",
+        "build:styles": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.21.5",
-        "@babel/preset-react": "^7.22.3",
-        "@babel/preset-typescript": "^7.21.5",
+        "@babel/preset-env": "^7.22.5",
+        "@babel/preset-react": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
         "@elucidario/pkg-rollup": "workspace:^",
         "@elucidario/pkg-tsconfig": "workspace:^",
         "@elucidario/pkg-types": "workspace:^",
-        "@storybook/addon-essentials": "7.0.22",
-        "@storybook/addon-interactions": "7.0.22",
-        "@storybook/addon-links": "7.0.22",
-        "@storybook/blocks": "7.0.22",
-        "@storybook/react": "7.0.22",
-        "@storybook/react-vite": "7.0.22",
-        "@storybook/testing-library": "0.0.14-next.2",
-        "@types/node": "^18.15.11",
+        "@rollup/plugin-babel": "^6.0.3",
+        "@rollup/plugin-node-resolve": "^15.1.0",
+        "@rollup/plugin-replace": "^5.0.2",
+        "@storybook/addon-essentials": "7.0.23",
+        "@storybook/addon-interactions": "7.0.23",
+        "@storybook/addon-links": "7.0.23",
+        "@storybook/addon-styling": "^1.3.0",
+        "@storybook/blocks": "7.0.23",
+        "@storybook/react": "7.0.23",
+        "@storybook/react-vite": "7.0.23",
+        "@storybook/testing-library": "0.2.0",
+        "@types/jest-axe": "^3.5.5",
+        "@types/node": "^20.3.1",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
+        "jest": "^29.5.0",
+        "jest-axe": "^7.0.1",
+        "jest-environment-jsdom": "^29.5.0",
         "prop-types": "15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "rollup": "^3.20.2",
-        "storybook": "7.0.22",
+        "rollup": "^3.25.2",
+        "storybook": "7.0.23",
+        "tailwindcss": "^3.3.2",
+        "tslib": "^2.5.3",
         "typescript": "^5.1.3"
-    },
-    "dependencies": {
-        "@types/react": "^18.0.32",
-        "@types/react-dom": "^18.2.4"
     }
 }
