--- a/packages/paths/package.json
+++ b/packages/paths/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose"
     },
     "dependencies": {
         "commander": "^10.0.1",
@@ -24,6 +24,7 @@
         "@elucidario/pkg-types": "workspace:^",
         "@types/lodash-es": "^4.17.7",
         "@types/node": "^18.15.11",
+        "jest": "^29.5.0",
         "rollup": "^3.20.2",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
