--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,17 +2,21 @@
     "name": "@elucidario/pkg-types",
     "version": "0.1.0",
     "description": "Tipagem do Elucidário.art",
+    "license": "MIT",
     "author": "Henrique Godinho <ola@hgod.in>",
     "types": "dist/index.d.ts",
-    "license": "MIT",
     "scripts": {
-        "clear": "rm -rf dist/*",
         "build": "pnpm clear && tsc",
+        "clear": "rm -rf dist/*",
         "dev": "pnpm clear && tsc -w"
     },
     "devDependencies": {
         "@elucidario/pkg-tsconfig": "workspace:^",
         "@types/node": "^18.15.11",
-        "typescript": "^5.0.4"
+        "typescript": "^5.1.3"
+    },
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
