chore(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,12 +14,13 @@
         "editor.wordWrap": "on"
     },
     "editor.formatOnSave": true,
-    "cSpell.language": "en, pt-br",
+    "cSpell.language": "en,pt-BR,pt,es-ES",
     "cSpell.words": [
         "ABSPATH",
         "Albrechtsen",
         "Athanasios",
         "Auguste",
+        "autodocs",
         "autoload",
         "automattic",
         "Baciccio",
@@ -45,8 +46,8 @@
         "colspan",
         "comite",
         "comunicacao",
-        "datetime",
         "dashicons",
+        "datetime",
         "dealerdirect",
         "debugado",
         "declaracao",
@@ -70,6 +71,7 @@
         "Frohmann",
         "funcao",
         "Gaulli",
+        "gdocid",
         "github",
         "Guanyin",
         "Hessel",
@@ -125,6 +127,7 @@
         "sporny",
         "squizlabs",
         "Tagliaferro",
+        "tailwindcss",
         "tecnica",
         "TECNICA",
         "teorico",
