--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -13,6 +13,8 @@
     "devDependencies": {
         "@elucidario/pkg-tsconfig": "workspace:^",
         "@types/node": "^18.15.11",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
         "typescript": "^5.1.3"
     },
     "peerDependencies": {
