feat(design-system): início integração mdorim

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -15,9 +15,8 @@
             "@/*": ["./src/*"],
             "@elucidario/pkg-types": [
                 "./node_modules/@elucidario/pkg-types/dist/index.d.ts"
-            ],
-            "tslib": ["./node_modules/tslib/tslib.d.ts"]
+            ]
         }
     },
-    "include": ["src/index.ts"]
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.json"]
 }
