--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -12,7 +12,11 @@
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "build": "rollup -c",
-        "build:styles": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+        "build:styles": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+        "watch:styles": "pnpm build:styles --watch"
+    },
+    "dependencies": {
+        "@elucidario/pkg-mdorim": "workspace:^"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.5",
@@ -24,16 +28,16 @@
         "@rollup/plugin-babel": "^6.0.3",
         "@rollup/plugin-node-resolve": "^15.1.0",
         "@rollup/plugin-replace": "^5.0.2",
-        "@storybook/addon-essentials": "7.0.23",
-        "@storybook/addon-interactions": "7.0.23",
-        "@storybook/addon-links": "7.0.23",
-        "@storybook/addon-styling": "^1.3.0",
-        "@storybook/blocks": "7.0.23",
-        "@storybook/react": "7.0.23",
-        "@storybook/react-vite": "7.0.23",
+        "@storybook/addon-essentials": "7.0.25",
+        "@storybook/addon-interactions": "7.0.25",
+        "@storybook/addon-links": "7.0.25",
+        "@storybook/addon-styling": "^1.3.2",
+        "@storybook/blocks": "7.0.25",
+        "@storybook/react": "7.0.25",
+        "@storybook/react-vite": "7.0.25",
         "@storybook/testing-library": "0.2.0",
         "@types/jest-axe": "^3.5.5",
-        "@types/node": "^20.3.1",
+        "@types/node": "^20.3.3",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
         "jest": "^29.5.0",
@@ -42,10 +46,9 @@
         "prop-types": "15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "rollup": "^3.25.2",
-        "storybook": "7.0.23",
+        "rollup": "^3.26.0",
+        "storybook": "7.0.25",
         "tailwindcss": "^3.3.2",
-        "tslib": "^2.5.3",
-        "typescript": "^5.1.3"
+        "typescript": "^5.1.6"
     }
 }
