--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,6 +128,7 @@
         "squizlabs",
         "Tagliaferro",
         "tailwindcss",
+        "tarsila",
         "tecnica",
         "TECNICA",
         "teorico",
